@@ -1,8 +1,8 @@
 Package: smacof
 Type: Package
 Title: Multidimensional Scaling in R: SMACOF.
-Version: 1.5-1
-Date: 2014-11-21
+Version: 1.6-0
+Date: 2014-11-29
 Authors@R: c(person("Patrick", "Mair", role = c("aut", "cre"), email =
     "mair@fas.harvard.edu"), person("Jan", "De Leeuw", role = "aut"),
     person("Ingwer", "Borg", role = "ctb"), person("Patrick J. F.", "Groenen",
