@@ -10,6 +10,10 @@ export(plot3dstatic)
 export(jackknife)
 export(permtest)
 export(gravity)
+export(indscal)
+export(idioscal)
+export(mds)
+export(unfolding)
 
 S3method(print, smacofB)
 S3method(summary, smacofB)
