@@ -1,0 +1,1 @@
+mds <- smacofSym
